get other models res

--- a/notebooks/other_models_from_hand_feats.ipynb
+++ b/notebooks/other_models_from_hand_feats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogisticRegression(C=2.0, class_weight=None, dual=False, fit_intercept=True,\n",
+      "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
+      "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
+      "          verbose=0, warm_start=False)\n",
+      "this fold train loss 0.1817577529 val loss 0.32636115369\n",
+      "============================\n",
+      "this fold train loss 0.188339761051 val loss 0.314083621684\n",
+      "============================\n",
+      "this fold train loss 0.194014942436 val loss 0.273811640208\n",
+      "============================\n",
+      "this fold train loss 0.200925988034 val loss 0.212427522396\n",
+      "============================\n",
+      "this fold train loss 0.197475350445 val loss 0.251545040817\n",
+      "============================\n",
+      "this fold train loss 0.188923753015 val loss 0.310593163259\n",
+      "============================\n",
+      "this fold train loss 0.186670807515 val loss 0.400552753954\n",
+      "============================\n",
+      "this fold train loss 0.189890993294 val loss 0.316867828402\n",
+      "============================\n",
+      "all avg 0.190999918586 0.300780340551\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr_train,lr_pred = cv_feat(LogisticRegression,fold_cnt=8,params={'C':2.0,'max_iter':100})\n",
+    "import pickle\n",
+    "with open('../features/other_model_lr2.pkl','wb') as fout:\n",
+    "    pickle.dump([lr_train,lr_pred],fout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -271,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -355,9 +395,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
