--- a/notebooks/xgb_ensemble-all.ipynb
+++ b/notebooks/xgb_ensemble-all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
     "                'max_depth': 3,\n",
     "                'eval_metric':'logloss',\n",
     "                'objective':'binary:logistic',\n",
-    "                'scale_pos_weight': 1.0\n",
+    "                'scale_pos_weight': 0.85\n",
     "                }\n",
     "        \n",
     "        # def mat\n",
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -205,40 +205,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\ttrain-logloss:0.636568\tvalid-logloss:0.640017\n",
+      "[0]\ttrain-logloss:0.637035\tvalid-logloss:0.640824\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 20 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[133]\ttrain-logloss:0.043002\tvalid-logloss:0.156956\n",
+      "[126]\ttrain-logloss:0.047605\tvalid-logloss:0.151843\n",
       "\n",
-      "[0]\ttrain-logloss:0.636779\tvalid-logloss:0.64116\n",
+      "[0]\ttrain-logloss:0.636924\tvalid-logloss:0.640642\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 20 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[64]\ttrain-logloss:0.086304\tvalid-logloss:0.160781\n",
+      "[116]\ttrain-logloss:0.052841\tvalid-logloss:0.15823\n",
       "\n",
-      "[0]\ttrain-logloss:0.6381\tvalid-logloss:0.64013\n",
+      "[0]\ttrain-logloss:0.6373\tvalid-logloss:0.638559\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 20 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[69]\ttrain-logloss:0.079784\tvalid-logloss:0.156364\n",
+      "[69]\ttrain-logloss:0.080784\tvalid-logloss:0.159995\n",
       "\n",
-      "local average valid loss 0.159644751677 val loss std 0.00118340946042\n",
+      "local average valid loss 0.158173335467 val loss std 0.00305382922753\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.018320\n",
-      "1  4023181e    0.952627\n",
-      "2  b20200e4    0.057359\n",
-      "3  e7f018bb    0.996367\n",
-      "4  4371c8c3    0.363661\n",
+      "0  5941774d    0.014298\n",
+      "1  4023181e    0.956390\n",
+      "2  b20200e4    0.046860\n",
+      "3  e7f018bb    0.997616\n",
+      "4  4371c8c3    0.311601\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.018379\n",
-      "1  4023181e    0.952710\n",
-      "2  b20200e4    0.057526\n",
-      "3  e7f018bb    0.996373\n",
-      "4  4371c8c3    0.364223\n"
+      "0  5941774d    0.014271\n",
+      "1  4023181e    0.955717\n",
+      "2  b20200e4    0.046607\n",
+      "3  e7f018bb    0.997629\n",
+      "4  4371c8c3    0.311604\n"
      ]
     }
    ],
@@ -248,24 +248,382 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-logloss:0.637039\tvalid-logloss:0.641443\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[95]\ttrain-logloss:0.067321\tvalid-logloss:0.173268\n",
+      "\n",
+      "[0]\ttrain-logloss:0.637805\tvalid-logloss:0.638863\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[142]\ttrain-logloss:0.048459\tvalid-logloss:0.129403\n",
+      "\n",
+      "[0]\ttrain-logloss:0.636644\tvalid-logloss:0.63871\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[75]\ttrain-logloss:0.079222\tvalid-logloss:0.174255\n",
+      "\n",
+      "[0]\ttrain-logloss:0.638058\tvalid-logloss:0.641276\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[94]\ttrain-logloss:0.072069\tvalid-logloss:0.141656\n",
+      "\n",
+      "[0]\ttrain-logloss:0.637232\tvalid-logloss:0.639386\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[77]\ttrain-logloss:0.077405\tvalid-logloss:0.169562\n",
+      "\n",
+      "local average valid loss 0.15943248003 val loss std 0.0184939798319\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.019566\n",
+      "1  4023181e    0.959674\n",
+      "2  b20200e4    0.066039\n",
+      "3  e7f018bb    0.997046\n",
+      "4  4371c8c3    0.286505\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.019116\n",
+      "1  4023181e    0.961161\n",
+      "2  b20200e4    0.071034\n",
+      "3  e7f018bb    0.997089\n",
+      "4  4371c8c3    0.294342\n"
+     ]
+    }
+   ],
    "source": [
-    "#cv_test(5,42,True)"
+    "cv_test(5,42,True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-logloss:0.637099\tvalid-logloss:0.642605\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[66]\ttrain-logloss:0.091165\tvalid-logloss:0.194401\n",
+      "\n",
+      "[0]\ttrain-logloss:0.636875\tvalid-logloss:0.640842\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[96]\ttrain-logloss:0.072941\tvalid-logloss:0.147053\n",
+      "\n",
+      "[0]\ttrain-logloss:0.637579\tvalid-logloss:0.638839\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[76]\ttrain-logloss:0.085773\tvalid-logloss:0.140621\n",
+      "\n",
+      "[0]\ttrain-logloss:0.637021\tvalid-logloss:0.638768\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[84]\ttrain-logloss:0.082628\tvalid-logloss:0.127881\n",
+      "\n",
+      "[0]\ttrain-logloss:0.636662\tvalid-logloss:0.641579\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[61]\ttrain-logloss:0.093234\tvalid-logloss:0.201471\n",
+      "\n",
+      "[0]\ttrain-logloss:0.637683\tvalid-logloss:0.637069\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[144]\ttrain-logloss:0.04908\tvalid-logloss:0.137296\n",
+      "\n",
+      "[0]\ttrain-logloss:0.63681\tvalid-logloss:0.641495\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[72]\ttrain-logloss:0.087804\tvalid-logloss:0.160843\n",
+      "\n",
+      "[0]\ttrain-logloss:0.637717\tvalid-logloss:0.637009\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[125]\ttrain-logloss:0.059684\tvalid-logloss:0.105046\n",
+      "\n",
+      "[0]\ttrain-logloss:0.637656\tvalid-logloss:0.640244\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[74]\ttrain-logloss:0.085405\tvalid-logloss:0.174604\n",
+      "\n",
+      "[0]\ttrain-logloss:0.637333\tvalid-logloss:0.63963\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[69]\ttrain-logloss:0.089569\tvalid-logloss:0.162035\n",
+      "\n",
+      "local average valid loss 0.158894789137 val loss std 0.0301510004096\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.018920\n",
+      "1  4023181e    0.959674\n",
+      "2  b20200e4    0.070415\n",
+      "3  e7f018bb    0.996213\n",
+      "4  4371c8c3    0.340732\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.018709\n",
+      "1  4023181e    0.961171\n",
+      "2  b20200e4    0.074239\n",
+      "3  e7f018bb    0.996405\n",
+      "4  4371c8c3    0.354586\n"
+     ]
+    }
+   ],
    "source": [
-    "#cv_test(10,42,True)"
+    "cv_test(10,42,True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-logloss:0.638126\tvalid-logloss:0.638934\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[101]\ttrain-logloss:0.066745\tvalid-logloss:0.136599\n",
+      "\n",
+      "[0]\ttrain-logloss:0.637751\tvalid-logloss:0.639852\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[144]\ttrain-logloss:0.045656\tvalid-logloss:0.137707\n",
+      "\n",
+      "[0]\ttrain-logloss:0.635512\tvalid-logloss:0.640866\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[71]\ttrain-logloss:0.068168\tvalid-logloss:0.195558\n",
+      "\n",
+      "local average valid loss 0.159071232849 val loss std 0.0293440018987\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.011449\n",
+      "1  4023181e    0.969048\n",
+      "2  b20200e4    0.054973\n",
+      "3  e7f018bb    0.997351\n",
+      "4  4371c8c3    0.277157\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.010972\n",
+      "1  4023181e    0.967923\n",
+      "2  b20200e4    0.058599\n",
+      "3  e7f018bb    0.997458\n",
+      "4  4371c8c3    0.276591\n"
+     ]
+    }
+   ],
+   "source": [
+    "cv_test(3,233,True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-logloss:0.637712\tvalid-logloss:0.640377\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[81]\ttrain-logloss:0.079673\tvalid-logloss:0.159986\n",
+      "\n",
+      "[0]\ttrain-logloss:0.637382\tvalid-logloss:0.635612\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[123]\ttrain-logloss:0.061506\tvalid-logloss:0.100947\n",
+      "\n",
+      "[0]\ttrain-logloss:0.637627\tvalid-logloss:0.639512\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[126]\ttrain-logloss:0.056221\tvalid-logloss:0.135502\n",
+      "\n",
+      "[0]\ttrain-logloss:0.637362\tvalid-logloss:0.643579\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[60]\ttrain-logloss:0.08705\tvalid-logloss:0.214504\n",
+      "\n",
+      "[0]\ttrain-logloss:0.637561\tvalid-logloss:0.639347\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[75]\ttrain-logloss:0.078322\tvalid-logloss:0.16545\n",
+      "\n",
+      "local average valid loss 0.157378928043 val loss std 0.0382335047193\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.015554\n",
+      "1  4023181e    0.960216\n",
+      "2  b20200e4    0.080303\n",
+      "3  e7f018bb    0.996614\n",
+      "4  4371c8c3    0.377916\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.015147\n",
+      "1  4023181e    0.962760\n",
+      "2  b20200e4    0.080086\n",
+      "3  e7f018bb    0.997014\n",
+      "4  4371c8c3    0.401336\n"
+     ]
+    }
+   ],
+   "source": [
+    "cv_test(5,233,True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-logloss:0.637694\tvalid-logloss:0.639075\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[104]\ttrain-logloss:0.067824\tvalid-logloss:0.136015\n",
+      "\n",
+      "[0]\ttrain-logloss:0.636316\tvalid-logloss:0.638591\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[132]\ttrain-logloss:0.05428\tvalid-logloss:0.16425\n",
+      "\n",
+      "[0]\ttrain-logloss:0.63794\tvalid-logloss:0.637022\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[145]\ttrain-logloss:0.049658\tvalid-logloss:0.11995\n",
+      "\n",
+      "[0]\ttrain-logloss:0.637318\tvalid-logloss:0.637194\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[172]\ttrain-logloss:0.042627\tvalid-logloss:0.08907\n",
+      "\n",
+      "[0]\ttrain-logloss:0.637813\tvalid-logloss:0.63832\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[145]\ttrain-logloss:0.052104\tvalid-logloss:0.098405\n",
+      "\n",
+      "[0]\ttrain-logloss:0.636562\tvalid-logloss:0.643393\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[118]\ttrain-logloss:0.059007\tvalid-logloss:0.174027\n",
+      "\n",
+      "[0]\ttrain-logloss:0.637167\tvalid-logloss:0.639691\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[89]\ttrain-logloss:0.075705\tvalid-logloss:0.178476\n",
+      "\n",
+      "[0]\ttrain-logloss:0.636877\tvalid-logloss:0.64258\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[50]\ttrain-logloss:0.102745\tvalid-logloss:0.241056\n",
+      "\n",
+      "[0]\ttrain-logloss:0.63721\tvalid-logloss:0.640031\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[80]\ttrain-logloss:0.080264\tvalid-logloss:0.175497\n",
+      "\n",
+      "[0]\ttrain-logloss:0.637357\tvalid-logloss:0.642513\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[93]\ttrain-logloss:0.072796\tvalid-logloss:0.16777\n",
+      "\n",
+      "local average valid loss 0.157284945224 val loss std 0.0435269656096\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.014695\n",
+      "1  4023181e    0.972750\n",
+      "2  b20200e4    0.085508\n",
+      "3  e7f018bb    0.997083\n",
+      "4  4371c8c3    0.390963\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.013200\n",
+      "1  4023181e    0.975083\n",
+      "2  b20200e4    0.088792\n",
+      "3  e7f018bb    0.997504\n",
+      "4  4371c8c3    0.403984\n"
+     ]
+    }
+   ],
+   "source": [
+    "cv_test(10,233,True)"
    ]
   }
  ],
