updated my best res

--- a/stacking/best_median.ipynb
+++ b/stacking/best_median.ipynb
@@ -92,7 +92,9 @@
    "source": [
     "other_res = []\n",
     "for f in other_files:\n",
-    "    other_res.append(pd.read_csv(f).is_iceberg.values)\n",
+    "    if f.endswith('csv'):\n",
+    "        other_res.append(pd.read_csv(f).is_iceberg.values)\n",
+    "    \n",
     "import numpy as np\n",
     "other_res = np.vstack(other_res).T"
    ]
